--- a/src/styles/channel-header.css
+++ b/src/styles/channel-header.css
@@ -26,7 +26,7 @@
 
 .channel-header-enter.channel-header-enter-active {
   opacity: 1;
-  transition: opacity 200ms ease-in;
+  transition: opacity 300ms ease-in;
 }
 
 .channel-header-leave {
