--- a/src/styles/signin-button.css
+++ b/src/styles/signin-button.css
@@ -1,15 +1,15 @@
 .social-icon {
-  background-color: rgba(219, 219, 219, 0.5);
+  background-color: rgba(240, 240, 240, 0.3);
 	color: #fff;
 	width: 40px;
 	height: 30px;
 	font-size: 20px;
 	margin-right: 10px;
 	padding-top: 10px;
-  border-radius: 5px;
+  border-radius: 20px;
   transition: all 400ms ease-in-out;
 }
 
 .social-icon:hover {
-  background-color: rgba(219, 219, 219, 1);
+  background-color: rgba(240, 240, 240, 0.6);
 }
